--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "node-red-contrib-loxone",
   "version": "0.0.1",
-  "description": "connection the loxone miniserver",
+  "description": "connecting the loxone miniserver",
   "license": "MIT",
   "keywords": [
 
   ],
   "node-red": {
     "nodes": {
-      "simplejs": "loxone/loxone.js"
+      "loxone": "loxone/loxone.js"
     }
+  },
+  "dependencies": {
+    "ws": "^1.0.1"
   },
   "repository": "codmpm/node-red-contrib-loxone"
 }
