--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-loxone",
   "version": "0.0.5",
-  "description": "Connecting the Loxone Miniserver to node-red via the Websocke API",
+  "description": "Connecting the Loxone Miniserver to node-red via Websocket API",
   "license": "MIT",
   "keywords": [
       "node-red", "loxone"
