--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-red-contrib-loxone",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "Connecting the Loxone Miniserver to node-red via Websocket API",
   "license": "MIT",
   "keywords": [
-      "node-red", "loxone"
+      "loxone"
   ],
   "node-red": {
     "nodes": {
