--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-loxone",
-  "version": "0.10.3",
+  "version": "0.10.4",
   "description": "Connecting the Loxone Miniserver to node-red via Websocket API",
   "license": "MIT",
   "keywords": [
@@ -14,7 +14,7 @@
   },
   "author": "Patrik Mayer <patrik.mayer@codm.de> <https://www.codm.de/)",
   "dependencies": {
-    "node-lox-ws-api": "file:../node-lox-ws-api"
+    "node-lox-ws-api": "codm/node-lox-ws-api"
   },
   "repository": "codmpm/node-red-contrib-loxone"
 }
