--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-loxone",
-  "version": "0.10.6",
+  "version": "0.10.7",
   "description": "Connecting the Loxone Miniserver to node-red via Websocket API",
   "license": "MIT",
   "keywords": [
@@ -13,6 +13,9 @@
     }
   },
   "author": "Patrik Mayer <patrik.mayer@codm.de> <https://www.codm.de/)",
+  "contributors": [
+    "Dustin Utecht <dustin.utecht@codm.de> (https://www.codm.de/)"
+  ],
   "dependencies": {
     "node-lox-ws-api": "github:codm/node-lox-ws-api#0.4.5-bugfix2"
   },
