--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-loxone",
-  "version": "0.10.10",
+  "version": "0.10.11",
   "description": "Connecting the Loxone Miniserver to node-red via Websocket API",
   "license": "MIT",
   "keywords": [
@@ -12,12 +12,12 @@
       "loxone": "loxone/loxone.js"
     }
   },
-  "author": "Patrik Mayer <patrik.mayer@codm.de> <https://www.codm.de/)",
+  "author": "Patrik Mayer <patrik.mayer@codm.de> (https://www.codm.de/)",
   "contributors": [
     "Dustin Utecht <dustin.utecht@codm.de> (https://www.codm.de/)"
   ],
   "dependencies": {
-    "node-lox-ws-api": "github:codm/node-lox-ws-api#0.4.5-bugfix2"
+    "node-lox-ws-api": "github:codm/node-lox-ws-api#0.4.5-bugfix3"
   },
   "repository": "codmpm/node-red-contrib-loxone"
 }
